[gd_scene load_steps=9 format=3 uid="uid://beyb5epk0pscm"]

[ext_resource type="Script" path="res://main.gd" id="1_wkc3b"]
[ext_resource type="AudioStream" uid="uid://e6brlppgswla" path="res://SFX/pellet_get.wav" id="2_i5ows"]
[ext_resource type="AudioStream" uid="uid://c0miqiv1e1tct" path="res://SFX/loose.wav" id="3_i4ifi"]

[sub_resource type="Gradient" id="Gradient_no0qk"]
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_f7x3y"]
gradient = SubResource("Gradient_no0qk")
width = 800
height = 800

[sub_resource type="LabelSettings" id="LabelSettings_wusg8"]
font_size = 30
font_color = Color(1, 0.160784, 0.301961, 1)
outline_size = 5
outline_color = Color(0, 0, 0, 0.843137)

[sub_resource type="LabelSettings" id="LabelSettings_inld8"]
font_size = 10
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_bsq6w"]
outline_size = 3
outline_color = Color(0, 0, 0, 1)

[node name="Main" type="Node2D"]
script = ExtResource("1_wkc3b")

[node name="Background" type="Sprite2D" parent="."]
texture = SubResource("GradientTexture2D_f7x3y")
centered = false

[node name="GameCycle" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="UI"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 312.0
offset_bottom = 312.0
metadata/_edit_use_anchors_ = true

[node name="CenterContainer" type="CenterContainer" parent="UI/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VSplitContainer" type="VSplitContainer" parent="UI/MarginContainer/CenterContainer"]
custom_minimum_size = Vector2(-8.49, 3.755)
layout_mode = 2

[node name="GameOver" type="Label" parent="UI/MarginContainer/CenterContainer/VSplitContainer"]
layout_mode = 2
text = "GAME OVER"
label_settings = SubResource("LabelSettings_wusg8")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="r to reset" type="Label" parent="UI/MarginContainer/CenterContainer/VSplitContainer"]
layout_mode = 2
text = "press 'r' to reset"
label_settings = SubResource("LabelSettings_inld8")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Score" type="Label" parent="UI/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Score
"
label_settings = SubResource("LabelSettings_bsq6w")

[node name="PelletGetSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_i5ows")

[node name="LooseSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_i4ifi")

[connection signal="timeout" from="GameCycle" to="." method="_on_game_cycle_timeout"]
